move user and party into services

--- a/app/partials/landing_page.html
+++ b/app/partials/landing_page.html
@@ -2,7 +2,9 @@
   <div class="starter-template">
     <h1>Wait and eat</h1>
     <p class="lead">The smart restaurant wait list.</p>
-    <button class="btn btn-primary btn-lg">Get Started Now!</button>
+    <a href="/#/register"
+        class="btn btn-primary btn-lg"
+        role="button">Get Started Now!</a>
   </div>
   <div class="row">
     <div class="col-md-4">
